...
  public var smartDashes: Bool?
  public var prefersDarkAppearance: Bool?

  public init() {}

  static let privateContentTypes: Set<String> = [
    "username", "password", "newPassword", "oneTimeCode", "emailAddress", "URL", "telephoneNumber",
    "creditCardNumber", "creditCardSecurityCode", "creditCardExpiration", "creditCardExpirationMonth",
    "creditCardExpirationYear", "creditCardName", "creditCardGivenName", "creditCardFamilyName",
    "creditCardMiddleName", "creditCardType", "postalCode", "flightNumber", "shipmentTrackingNumber",
    "birthdate", "birthdateDay", "birthdateMonth", "birthdateYear",
  ]

...
